# can-flasher

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  REQUIREMENTS.md  ROADMAP.md  rust-toolchain.toml
.github/: roadmap.yaml
.github/scripts/: render_roadmap.py
.github/workflows/: branch-issue.yml  can-studio-ci.yml  can-studio-release.yml  ci.yml  close-on-dev-merge.yml  editor-ci.yml  editor-release.yml  release.yml  roadmap.yml  sync-dev-after-release.yml
apps/can-studio/: .gitignore  README.md  index.html  package.json  vite.config.ts
apps/can-studio/src/: App.svelte  app.css
apps/can-studio/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/can-studio/src-tauri/capabilities/: default.json
apps/can-studio/src-tauri/src/: bus_monitor.rs  dbc.rs  diagnose.rs  flash.rs  lib.rs  live_data.rs  logs.rs  main.rs  pit_diag.rs  provision.rs  swd.rs
apps/can-studio/src/lib/: AdapterStatusBar.svelte  AdaptersView.svelte  BusMonitorView.svelte  DataLogsView.svelte  DiagnosticsView.svelte  FlashView.svelte  LiveDataView.svelte  NodeIdRolePicker.svelte  PitDiagView.svelte  PlaceholderView.svelte  SettingsView.svelte  Sidebar.svelte  SignalsView.svelte  SwdFlashView.svelte  UpdateBanner.svelte  bus_monitor.ts  cli.ts  dbc.ts  diagnose.ts  flash.ts  live_data.ts  logs.ts  pit_diag.ts  provision.ts  settings.svelte.ts  stores.ts  swd.ts  types.ts  updater.ts
demo/: README.md
demo/MAIN_IFS08_DEMO/: .gitignore  .mxproject  CMakeLists.txt  MAIN_IFS08_DEMO.ioc  STM32H733XG_FLASH.ld  STM32H733_app.ld
demo/MAIN_IFS08_DEMO/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
demo/MAIN_IFS08_DEMO/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c
demo/MAIN_IFS08_DEMO/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
demo/MAIN_IFS08_DEMO/cmake/stm32cubemx/: CMakeLists.txt
docs/: CONTRIBUTING.md  INSTALL.md  PERFORMANCE.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.3.1.md  RELEASE_NOTES_v2.3.2.md  RELEASE_NOTES_v2.3.3.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.4.1.md  RELEASE_NOTES_v2.4.2.md  RELEASE_NOTES_v2.4.3.md  RELEASE_NOTES_v2.4.4.md  RELEASE_NOTES_v2.4.5.md  UPDATES.md  USAGE.md
editor/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
editor/vscode/media/: live-data.css  live-data.js
editor/vscode/media/walkthroughs/: adapter.md  cli.md  discover.md  flash.md
editor/vscode/src/: adapterPresence.ts  adapters.ts  buildDiagnostics.ts  cli.ts  cliManager.ts  cliPath.ts  cmakePresets.ts  config.ts  diagnose.ts  discover.ts  doctor.ts  extension.ts  flash.ts  liveData.ts  liveDataPanel.ts  output.ts  picker.ts  pitDiagListen.ts  readback.ts  statusBar.ts  toolsPanel.ts  toolsTree.ts  toolsView.ts  tree.ts
src/: app_control.rs  bootloader_fetch.rs  lib.rs  logging.rs  main.rs  provision_seed.rs
src/cli/: adapters.rs  config.rs  diagnose.rs  discover.rs  flash.rs  logs.rs  mod.rs  pit_diag.rs  provision.rs  replay.rs  send_raw.rs  swd_flash.rs  verify.rs
src/firmware/: loader.rs  mod.rs
src/flash/: mod.rs
src/pit_diag/: ecu.rs  mod.rs  udv.rs
src/pit_diag/testdata/: PROVENANCE.txt  ams.dbc
src/protocol/: commands.rs  ids.rs  isotp.rs  logfs.rs  mod.rs  opcodes.rs  records.rs  responses.rs
src/session/: mod.rs
src/swd/: mod.rs
src/transport/: isolation.rs  mod.rs  pcan.rs  slcan.rs  socketcan.rs  stub_device.rs  vector.rs  virtual_bus.rs
target-pi/: .rustc_info.json
target-pi/debug/.fingerprint/anstream-190e6f04f73ae63c/: lib-anstream  lib-anstream.json
target-pi/debug/.fingerprint/anstyle-2061560229f20f1e/: lib-anstyle  lib-anstyle.json
target-pi/debug/.fingerprint/anstyle-parse-e934bd433e613219/: lib-anstyle_parse  lib-anstyle_parse.json
target-pi/debug/.fingerprint/anstyle-query-203c3a904b2f7ece/: lib-anstyle_query  lib-anstyle_query.json
target-pi/debug/.fingerprint/anyhow-1288de26af2b7163/: lib-anyhow  lib-anyhow.json
target-pi/debug/.fingerprint/anyhow-b36da3d0ee6c4835/: build-script-build-script-build  build-script-build-script-build.json
target-pi/debug/.fingerprint/anyhow-efe7c0c8b7e96760/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-pi/debug/.fingerprint/async-trait-792203d23167b3e0/: lib-async_trait  lib-async_trait.json
target-pi/debug/.fingerprint/autocfg-605c865665903a62/: lib-autocfg  lib-autocfg.json
target-pi/debug/.fingerprint/bitflags-6bb53b60eba55420/: lib-bitflags  lib-bitflags.json
target-pi/debug/.fingerprint/bitflags-8c071d78fe1a247f/: lib-bitflags  lib-bitflags.json
target-pi/debug/.fingerprint/byteorder-2cec989bbe6d07b2/: lib-byteorder  lib-byteorder.json
target-pi/debug/.fingerprint/can-flasher-27ed45e0f669e435/: dep-test-integration-test-diagnose_subcommand  test-integration-test-diagnose_subcommand  test-integration-test-diagnose_subcommand.json
target-pi/debug/.fingerprint/can-flasher-3f0e34bafae637f1/: bin-can-flasher  bin-can-flasher.json
target-pi/debug/.fingerprint/can-flasher-574a4d893e325f4f/: dep-lib-can_flasher  lib-can_flasher  lib-can_flasher.json
target-pi/debug/.fingerprint/can-flasher-5abfc59cd63075cc/: dep-test-integration-test-replay_subcommand  test-integration-test-replay_subcommand  test-integration-test-replay_subcommand.json
target-pi/debug/.fingerprint/can-flasher-60d36d70a1bc2de4/: dep-test-integration-test-virtual_pipeline  test-integration-test-virtual_pipeline  test-integration-test-virtual_pipeline.json
target-pi/debug/.fingerprint/can-flasher-8d95a2322ddeaf8d/: dep-test-integration-test-verify_subcommand  test-integration-test-verify_subcommand  test-integration-test-verify_subcommand.json
target-pi/debug/.fingerprint/can-flasher-9e58e651584d9503/: test-bin-can-flasher  (+1 more)
tests/: config_subcommand.rs  diagnose_subcommand.rs  discover_subcommand.rs  flash_manager.rs  flash_subcommand.rs  isolation_host.rs  logfs_pipeline.rs  pitdiag_dbc_conformance.rs  reboot_to_bootloader.rs  replay_subcommand.rs  verify_subcommand.rs  virtual_pipeline.rs
(+542 files in other folders)
