[workspace]
# Cargo workspace: the existing `can-flasher` crate lives at the
# root (so this isn't a virtual workspace), and `apps/can-studio/`
# adds the Tauri desktop app as a sibling member that depends on
# `can-flasher` via a path dependency. Future apps land here too.
members = [
    "apps/can-studio/src-tauri",
]

[package]
name        = "can-flasher"
version     = "2.1.0"
edition     = "2021"
rust-version = "1.95"
description = "Host-side CAN flasher for the isc-fs STM32 CAN bootloader"
license     = "MIT"
repository  = "https://github.com/isc-fs/can-flasher"
readme      = "README.md"
keywords    = ["can", "stm32", "bootloader", "flasher", "canbus"]
categories  = ["command-line-utilities", "embedded"]

# Binaries the release pipeline ships. `can-flasher` is the single
# binary produced in v1; future auxiliaries (e.g. a daemon / bus
# monitor) land here as additional [[bin]] entries.
[[bin]]
name = "can-flasher"
path = "src/main.rs"

# ---- Runtime dependencies ----
#
# Kept minimal in feat/2 — only what the CLI skeleton needs. Transport
# crates (serialport, socketcan, libloading) land with their respective
# backend branches; protocol crates (crc, object, ihex) land with the
# firmware loader; output crates (rusqlite, tabled, indicatif) land as
# the features that use them do.

[dependencies]
anyhow             = "1.0"
async-trait        = "0.1"
clap               = { version = "4.5", features = ["derive", "wrap_help"] }
crc                = "3.3"
ihex               = "3.0"
indicatif          = "0.17"
object             = { version = "0.36", default-features = false, features = ["read_core", "elf", "std"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serialport         = "4.7"
thiserror          = "2.0"
tokio              = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# probe-rs is the pure-Rust SWD/JTAG stack used by the new
# `swd-flash` subcommand to lay the bootloader onto a bare STM32
# via ST-LINK V2 / V3. Gated behind the `swd` Cargo feature so
# the existing CAN flasher binary stays small for operators who
# only ever do over-CAN app updates. Disabled by default until
# the spike confirms the libusb story across all three OSes.
probe-rs           = { version = "0.31", optional = true }

# Blocking HTTP client with bundled rustls TLS. Used by the
# bootloader auto-download path (`--release` flag on `swd-flash`
# + Studio's "Fetch from releases" toggle) to pull the right
# `CAN_BL.elf` asset from the BL repo. Same `swd`-feature gating
# as probe-rs — only operators on the SWD path pay the size cost.
ureq               = { version = "2.10", default-features = false, features = ["tls", "json"], optional = true }

# Platform-correct cache directory resolution
# (~/Library/Caches on macOS, $XDG_CACHE_HOME / ~/.cache on Linux,
# %LOCALAPPDATA% on Windows). Used by `bootloader_fetch` to pick
# a sensible spot for the downloaded `.elf`. Tiny dependency
# (~200 LoC of platform conditionals); still gated to keep the
# default-feature binary unchanged.
dirs               = { version = "5.0", optional = true }

[features]
# Default feature set — everything that ships in the existing
# operator-facing binary continues to ship.
default = []

# Opt-in SWD/JTAG flashing via probe-rs. Pulls in libusb + a
# handful of additional crates (~2 MB binary growth, target
# database). Build with `cargo install … --features swd` or
# `cargo build --features swd`. Release binaries from
# `release.yml` will turn this on once the spike validates on
# all three platforms.
swd = ["dep:probe-rs", "dep:ureq", "dep:dirs"]

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Linux-only dependencies. SocketCAN talks to the kernel's AF_CAN
# stack directly; on macOS and Windows the same --interface choices
# fall back to SLCAN / PCAN, so the crate isn't pulled in at all.
[target.'cfg(target_os = "linux")'.dependencies]
socketcan = { version = "3.5", features = ["tokio"] }

# Windows + macOS dependencies. PCAN-Basic is loaded at runtime via
# libloading so the flasher binary compiles and runs on machines
# without the SDK installed — a missing library surfaces as a clean
# "adapter unavailable" error rather than a startup crash. On Linux
# PCAN adapters are exposed through the peak_usb kernel module and
# read as ordinary SocketCAN interfaces, so libloading isn't needed
# there.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
libloading = "0.8"

# Release profile: default opt-level=3, single codegen unit for better
# LTO, stripped symbols. Keeps the single-static-binary promise small.
[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
